# goto10

./: .gitignore  CMakeLists.txt  README.md  cycle_detect.cpp  test_rnd.cpp  todo.md
.claude/: settings.local.json
c64/: 10print.bas  c64_spy.ld  rnd_10print.s  rnd_debug_45295.s  rnd_spy.s  vice_compare.bas
doc/: algebraic_analysis.md  algorithm.md  cycle_analysis.md  fmult_carry_bug.md  history.md  microsoft_bugs.md  vice_automation.md
doc/refs/: README.md  c64_rnd_disassembly.txt
docs/refs/: findings.txt
src/: applesoftrnd.cpp  applesoftrnd.h  best_seed.cpp  c64rnd.cpp  c64rnd.h  compare_sampled.cpp  compare_seeds.cpp  cycle_detect.cpp  cycle_zeros.cpp  debug_multiply.cpp  gen_seeds.cpp  msbasicfprnd.cpp  msbasicfprnd.h  msbasicrnd.h  test_rnd.cpp  vice_run.py  vice_sample_rnd.py
